@@ -26,7 +26,7 @@ bgcolor="#ffffff"
 #endif
 
 <TD ALIGN="RIGHT"><TABLE BGCOLOR="#a0a0a0" BORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD>
-<TABLE BORDER="0" CELLPADDING="5" CELLSPACING="1"><TR>
+<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="1"><TR>
 #ifdef ENTRY_URL
   <TD BGCOLOR="#ffffff"><A href="##ENTRY_URL##">Entry</A></TD>
 #endif
